<resources>
    <string name="app_name">MercaAqui</string>

    <string name="home_productos">Productos Frescos</string>
    <string name="home1">Nuestros productos siempre son tratados y transportados de la mejor manera mas inocua posible garantizando asi que siempre obtenga un producto fresco directamente traido del campo.</string>

    <string name="nombre_producto">Nombre producto</string>
    <string name="tipo_producto">Tipo producto</string>
    <string name="precio_producto">Precio producto</string>
    <string name="cantidad_disponible">Cantidad Disponible</string>
    <string name="informacion_producto">Información del Producto No.</string>
    <string name="signo_pesos">$</string>

    <string name="titulo_venta">Cliente:</string>
    <string name="nombre_cliente">David Felipe</string>
    <string name="telefono_vendedor">3154254875</string>
    <string name="fecha_venta">Mayo 5 2022, 10:39</string>
    <string name="informacion_vendedor">Información del Usuario No.</string>

    <string name="merca_aqui">Merca Aqui</string>
    <string name="merca_aqui2">El lugar en donde encontrarás lo que necesites</string>
    <string name="precio_10000">10000</string>

    <string name="nombre_vendedor">David Felipe</string>
    <string name="apellido_vendedor">Castro Herrera</string>
    <string name="correo_vendedor">castroherreradavid@gmail.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cantidad_disponible_dos_puntos">Cantidad Disponible:</string>
    <string name="precio">Precio:</string>
    <string name="tipo">Tipo:</string>
    <string name="nombre_del_producto">Nombre del Producto:</string>
    <string name="_1">1</string>
    <string name="correo">Correo:</string>
    <string name="celular">Celular:</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento:</string>
    <string name="detalle_venta">Detalle Venta</string>
    <string name="id_factura">ID Factura:</string>
    <string name="mayo_5_2022_10_39">Mayo 5 2022, 10:39</string>
    <string name="para">Para:</string>
    <string name="orlando_rivera">Orlando Rivera</string>
    <string name="id_vendedor">ID Vendedor:</string>
    <string name="_11">11</string>
    <string name="productos">Productos</string>
    <string name="total">Total:</string>
    <string name="_40000">40000</string>


</resources>