<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="40dp"
    android:paddingHorizontal="30dp">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Toolbar
            android:id="@+id/tbVendedorDets"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_45" >
        </Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_40"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_vendedor2"
            android:orientation="vertical">
            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_baseline_dark_person_24"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/nombreVendedorDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/nombre_vendedor"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/apellidoVendedorDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:paddingLeft="@dimen/tiny_padding"
                    android:text="@string/apellido_vendedor"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Vendedor"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginHorizontal="@dimen/margin_20"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informacion_vendedor"
                android:textColor="@color/gray"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/id_vendedorDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/tiny_padding"
                android:text="@string/_1"
                android:textSize="@dimen/text_15"
                android:textStyle="bold"
                android:textColor="@color/gray"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/margin_20"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginTop="@dimen/margin_10"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginBottom="@dimen/margin_20"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:text="@string/correo"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/correoVendedorDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_10"
                android:layout_marginStart="@dimen/margin_10"
                android:text="@string/correo_vendedor"
                android:textSize="15sp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/celular"
                android:textColor="@color/gray"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/celularVendedorDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_10"
                android:layout_marginStart="@dimen/margin_10"
                android:text="@string/telefono_vendedor"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_de_nacimiento"
                android:textColor="@color/gray"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/nacimientoVendedorDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_10"
                android:layout_marginStart="@dimen/margin_10"
                android:text="@string/fecha_venta"
                android:textSize="@dimen/text_15"/>
        </LinearLayout>



    </LinearLayout>

</FrameLayout>