<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_10"
    android:layout_marginEnd="@dimen/margin_10"
    android:layout_marginTop="@dimen/margin_20"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_items"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/imagenProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/producto"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2"
                android:layout_marginStart="15dp" >
                <TextView
                    android:id="@+id/nombreProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_producto"
                    android:textStyle="bold"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/tipoProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo_producto"
                    android:textSize="13sp"
                    android:layout_marginTop="7dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signo_pesos"
                        android:textSize="13sp" />
                    <TextView
                        android:id="@+id/precioProducto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/precio_10000"
                        android:textSize="13sp"
                        android:layout_marginStart="3dp"/>
                </LinearLayout>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="Ver Más"
                    android:textSize="10sp"
                    app:cardCornerRadius="10dp"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginTop="@dimen/margin_10"/>
    </LinearLayout>

</LinearLayout>
