<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_vendedor"
        android:layout_marginVertical="@dimen/margin_20"
        android:layout_marginHorizontal="@dimen/margin_20">

        <ImageView
            android:layout_width="294dp"
            android:layout_height="174dp"
            android:src="@drawable/producto"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_vendedor3"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginHorizontal="@dimen/margin_20"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/informacion_producto"
                    android:textColor="@color/gray"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/id_vendedor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/tiny_padding"
                    android:text="1"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="@color/gray"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/margin_20"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginTop="@dimen/margin_10"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_marginBottom="@dimen/margin_20"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:text="Nombre del Producto:"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/nombreProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin_10"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:text="@string/nombre_producto"
                    android:textSize="15sp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tipo: "
                    android:textColor="@color/gray"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tipoProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin_10"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:text="@string/tipo_producto"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Precio: "
                    android:textColor="@color/gray"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/precioProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin_10"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:text="@string/precio_producto"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cantidad Disponible: "
                    android:textColor="@color/gray"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/cantidadDisponible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin_10"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:text="@string/cantidad_disponible"
                    android:textSize="15sp"/>
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>


</androidx.cardview.widget.CardView>