<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_items"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="0.6"
                android:paddingStart="@dimen/margin_10">
                <ImageView
                    android:id="@+id/imagenVenta"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_baseline_shopping_cart_24"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2"
                android:layout_marginStart="15dp"
                android:paddingTop="@dimen/margin_10">
                <TextView
                    android:id="@+id/estadoVenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_venta"
                    android:textStyle="bold"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/fechaVenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_venta"
                    android:textSize="13sp"
                    android:layout_marginTop="7dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="Detalle"
                    android:textSize="10sp"
                    app:cardCornerRadius="10dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="7dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signo_pesos"
                        android:textSize="13sp" />
                    <TextView
                        android:id="@+id/ventaPrecio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="40000"
                        android:textSize="14sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginTop="@dimen/margin_10"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>